# QWalkingPad

./: .gitmodules  AbsoluteSliderStyle.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Protocol.cpp  Protocol.h  README.md  Settings.h  Statistics.cpp  Statistics.h  WalkingPad.cpp  WalkingPad.h  main.cpp
